--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.89.0",
+    "@types/node": "^24.5.2",
     "@types/qs": "^6.14.0",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.1",
