--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-VITE_API_URL=https://api.example.com
-VITE_BACKEND_URL=http://localhost:8000
+VITE_API_URL=https://example.com
+VITE_APP_NAME=RAP_APP
+VITE_BACKEND_URL=https://example.com
 VITE_DEBUG=false
