--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ coverage
 # ⚙️ Local environment files
 .env
 .env.local
+.env.production
 .env.development.local
 .env.production.local
 .env.test.local
