--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "preview": "vite preview",
   "type-check": "tsc --noEmit",
   "lint": "eslint src",
-  "lint:fix": "eslint src --fix",
+  "lint:fix": "eslint src --ext .ts,.tsx --fix",
   "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
-  "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\""
-},
-
+  "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
+  "precommit": "npm run type-check && npm run lint && npm run format:check",
+  "deploy": "bash scripts/deploy_front.sh"
+}
+,
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
