--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
-"scripts": {
-  "dev": "vite",
-  "build": "tsc && vite build",
-  "preview": "vite preview",
-  "type-check": "tsc --noEmit",
-  "lint": "eslint src",
-  "lint:fix": "eslint src --ext .ts,.tsx --fix",
-  "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
-  "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
-  "precommit": "npm run type-check && npm run lint && npm run format:check",
-  "deploy": "bash scripts/deploy_front.sh"
-}
-,
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
+    "precommit": "npm run type-check && npm run lint && npm run format:check",
+    "deploy": "bash scripts/deploy_front.sh"
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -23,6 +22,7 @@
     "@mui/material": "^6.1.9",
     "@mui/x-date-pickers": "^8.12.0",
     "@tanstack/react-query": "^5.89.0",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.18",
     "dompurify": "^3.3.0",
     "qs": "^6.14.0",
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@tanstack/react-query-devtools": "^5.89.0",
+    "@types/axios": "^0.14.0",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^24.5.2",
     "@types/qs": "^6.14.0",
