--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --port 4173 --open",
     "type-check": "tsc --noEmit",
     "lint": "eslint src",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
@@ -22,7 +22,7 @@
     "@mui/material": "^6.1.9",
     "@mui/x-date-pickers": "^8.12.0",
     "@tanstack/react-query": "^5.89.0",
-    "axios": "^0.27.2",
+    "axios": "0.27.2",
     "dayjs": "^1.11.18",
     "dompurify": "^3.3.0",
     "qs": "^6.14.0",
@@ -32,7 +32,9 @@
     "react-quilljs": "^2.0.5",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.2.1"
+    "recharts": "^3.2.1",
+    "styled-components": "^6.1.11",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -44,6 +46,7 @@
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^4.3.4",
