--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
     "precommit": "npm run type-check && npm run lint && npm run format:check",
-    "deploy": "bash scripts/deploy_front.sh"
+    "deploy": "bash scripts/deploy_front.sh",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -22,19 +23,19 @@
     "@mui/material": "^6.1.9",
     "@mui/x-date-pickers": "^8.12.0",
     "@tanstack/react-query": "^5.89.0",
-    "axios": "0.27.2",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.18",
     "dompurify": "^3.3.0",
     "qs": "^6.14.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-quilljs": "^2.0.5",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
-    "styled-components": "^6.1.11",
-    "react-icons": "^5.3.0"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -50,6 +51,9 @@
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^4.0.6",
+    "@vitest/ui": "^4.0.6",
+    "axios-mock-adapter": "^2.1.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -60,6 +64,7 @@
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
     "typescript": "^5.6.3",
-    "vite": "^7.1.6"
+    "vite": "^7.1.6",
+    "vitest": "^4.0.6"
   }
 }
