Modifications UI React (en cours)

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 # === FRONTEND RAP_APP (Production) ===
 
 # 🧩 URL de l’API Django en production
-VITE_API_URL=https://rap.adserv.fr
+VITE_API_URL=https://rap.adserv.fr/api
 
 # 🏷️ Nom de l’application (affiché dans le titre, logs, etc.)
 VITE_APP_NAME=RAP_APP
