Modif README.MD, nginx_front.conf,scripts/deploy_front.sh

--- a/nginx_front.conf
+++ b/nginx_front.conf
@@ -13,7 +13,7 @@ server {
 
     # Proxy vers le backend Django (API)
     location /api/ {
-        proxy_pass http://127.0.0.1:8000/api/;
+        proxy_pass http://unix:/srv/rap_app/backend/gunicorn_rapapp.sock;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
