--- a/nginx_front.conf
+++ b/nginx_front.conf
@@ -3,22 +3,50 @@
 server {
     listen 80;
     server_name rap.adserv.fr;
+    return 301 https://$host$request_uri;
+}
 
+server {
+    listen 443 ssl;
+    server_name rap.adserv.fr;
+
+    # 🔒 Certificats SSL (Let's Encrypt)
+    ssl_certificate /etc/letsencrypt/live/rap.adserv.fr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/rap.adserv.fr/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    # 🌐 FRONTEND (React)
     root /var/www/rap_app_front;
     index index.html;
-
     location / {
         try_files $uri /index.html;
     }
 
-    # Proxy vers le backend Django (API)
+    # ⚙️ BACKEND (Django)
     location /api/ {
         proxy_pass http://unix:/srv/rap_app/backend/gunicorn_rapapp.sock;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    access_log /srv/rap_app/front/logs/access.log;
-    error_log /srv/rap_app/front/logs/error.log;
+
+        # ⚙️ ADMIN DJANGO
+    location /admin/ {
+        proxy_pass http://unix:/srv/rap_app/backend/gunicorn_rapapp.sock;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+
+    # 🧾 Logs
+    access_log /srv/rap_app/front/logs/nginx_access.log;
+    error_log /srv/rap_app/front/logs/nginx_error.log;
 }
+
+
 
