--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
+    "@mui/x-data-grid": "^8.17.0",
     "@mui/x-date-pickers": "^8.12.0",
     "@tanstack/react-query": "^5.89.0",
     "axios": "^1.7.7",
