--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/axios": "^0.14.0",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^24.5.2",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/qs": "^6.14.0",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.1",
